force-app/main/default/objects/copado__Git_Org_Commit__c/fields/copado__View_in_Git__c.field-meta.xml
<CustomField>
    <fullName>copado__View_in_Git__c</fullName>
    <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)), copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &#39;&#39;),
		IF(
			AND(NOT(ISPICKVAL(copado__Git_Backup__r.copado__Git_Repository__r.copado__Git_Provider__c,&#39;&#39;)),NOT(ISPICKVAL(copado__Git_Backup__r.copado__Git_Repository__r.copado__Git_Provider__c, &#39;Others&#39;))),
			copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c +  copado__Commit_Id__c,
			IF(
				CONTAINS(copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&#39;[COMMIT_ID]&#39;),
				SUBSTITUTE(copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&#39;[COMMIT_ID]&#39;,copado__Commit_Id__c),
				copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c + copado__Commit_Id__c
			)
		),
	&#39;&#39;), 
	copado__Commit_Id__c
)</formula>
    <label>View in Git</label>
    <type>Text</type>
</CustomField>