force-app/main/default/objects/copado__Git_Org_Commit__c/validationRules/copado__Commit_Id_Status_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Commit_Id_Status_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !ISBLANK(copado__Commit_Id__c), OR(ISPICKVAL(copado__Status__c,&quot;Pending&quot;),ISPICKVAL(copado__Status__c,&quot;No changes&quot;)))</errorConditionFormula>
    <errorDisplayField>copado__Status__c</errorDisplayField>
    <errorMessage>The commit status cannot be &#39;Pending&#39; or &#39;No changes&#39; whenever there is a commit Id.</errorMessage>
</ValidationRule>